--- a/pythonanywhere/templates/flow.html
+++ b/pythonanywhere/templates/flow.html
@@ -716,6 +716,19 @@
 
         }
 
+        .succes {
+          /* green outline */
+          outline: 2px solid #4CAF50;
+          outline-offset: 2px; /* space between element edge and outline */
+        }
+        
+        .danger {
+          /* red outline */
+          outline: 2px solid #F44336;
+          outline-offset: 2px;
+        }
+
+
         #bosbes-overlay {
             position: fixed; top: 0; left: 0; width:100%; height:100%;
             background: rgba(0,0,0,0.7); z-index:10000;
