--- a/pythonanywhere/templates/flow.html
+++ b/pythonanywhere/templates/flow.html
@@ -716,7 +716,7 @@
 
         }
 
-        .succes {
+        .success {
           /* green outline */
           outline: 2px solid #4CAF50;
           outline-offset: 2px; /* space between element edge and outline */
