Email confirmation on message submition

--- a/pythonanywhere/templates/email_templates/base.html
+++ b/pythonanywhere/templates/email_templates/base.html
@@ -17,7 +17,9 @@
               <!-- HEADER -->
               <tr>
                 <td align="center" style="background-color:#3a3a3a;padding:20px;">
-                  <img src="{{ logo_url }}" alt="Logo" width="120" style="display:block;border:none;outline:none;text-decoration:none;"/>
+                  <a href="https://bosbes.eu.pythonanywhere.com">
+                    <img src="{{ logo_url }}" alt="Logo" width="120" style="display:block;border:none;outline:none;text-decoration:none;"/>
+                  </a>
                   <h1 style="font-family:sans-serif;color:#ffffff;font-size:24px;line-height:28px;Margin:10px 0 0 0;">{{ title }}</h1>
                 </td>
               </tr>
