--- a/pythonanywhere/templates/index.html
+++ b/pythonanywhere/templates/index.html
@@ -515,6 +515,10 @@
             #update-menu button {
                 padding: 4px;
             }
+            #storage-container {
+                margin: 0 0;
+                margin-right: 166px !important;
+            }
 
         }
 
